Updated homepage to show "emeritus" Also updated HoW_S with some shotgun mic info.

--- a/index_S21.html
+++ b/index_S21.html
@@ -60,7 +60,7 @@
   <TD WIDTH="455">
   <img src="cd_common/transparent_pixel.gif" height="1" width="1">
   <H1>Dr. Douglas F. De Boer, P.E.</H1><P>
-        Professor Emeritus of Engineering<BR>
+        Professor of Engineering<BR>
         Dordt University<BR>
         498 Fourth Avenue NE<BR>
         Sioux Center IA 51250</P>
@@ -79,6 +79,8 @@
 <TR VALIGN="BOTTOM">
   <TD>
         <P>
+        Office:  SB1638<BR> 
+        Office Phone:  712-722-6245 <BR>
         <IMG SRC="INDEX/DDB_email_addr.gif"><ALT="Douglas(dot)DeBoer(at)dordt(dot)edu"><BR>
         More about Prof. De Boer, his <a href="CV.HTM">CV</a>.<br>
         </P>
@@ -90,71 +92,115 @@
 <HR style="color:#000000; background-color:#000000; height:3px">
 <br>
 Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
-<a href="#Interests">Interests</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+<a href="#Office_Hours">Office Hours</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 <a href="#Courses">Courses</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 <a href="#Links">Links</a>
 
 <HR>
 <br>
-<a name="Interests"></a>
-<H1>Interests</H1>
+<a name="Office_Hours"></a>
+<H1>Office Hours, Spring 2020</H1>
 <blockquote>
-     Prof. De Boer retired after the spring semester in 2021.  In retirement 
-	 Professor De Boer continues to be active in the IEEE as the Region 4 
-	 Grant Applications Chairperson. <br><br>
-	 
-	 Professor De Boer's research was in the area of combined coding and 
-	 modulation theory for cellular telephone and other communication uses.  
-	 Professor De Boer also has an interest in embedded systems and a broad 
-	 interest in electronics in general.<br><br>
-	 
-     Face-to-face meetings may be arranged by appointment.<br>
+     Face-to-face meetings are by appointment only during the pandemic.<br>
 	 Phone calls need not be scheduled&mdash;just call 712-<IMG SRC=home_ph.gif ALIGN="ABSBOTTOM"> any time Monday 
-	 through Saturday between 7:30 AM and 10 PM. E-mail is also welcome.  
-	 Send e-mail to Douglas.DeBoer@Dordt.edu<br><br>
-</blockquote><br>
+	 through Saturday between 7:30 AM and 10 PM.<br><br>
 	 
+     Prof. De Boer is over age 65 and is teaching only part-time  now.  Due to 
+	 the pandemic he is minimizing the time he spends on campus to mostly  
+	 class and lab hours.  But making an appointment is welcomed and is 
+	 easy.  No appointment is needed to call on the phone.  <br><br>
+	 
+     Students have permission to telephone Prof. De Boer at home or at 
+	 his office between 7:30 AM and 10 PM any day except Sunday. (Sunday 
+	 is OK too if if the call is not about course work.)  The phone numbers 
+	 are:  Home (try this first): 712-<IMG SRC=home_ph.gif ALIGN="ABSBOTTOM">, 
+	 and Office: 712-722-6245<br><br>
+    
+     Here is Prof. De Boer's general <b><A HREF="S21/SCH_S21.pdf" 
+     >Weekly Schedule</A></b>.
+	 </blockquote><br>
+	 
+
+
 </td></tr></table>
 <TABLE BORDER="0" CELLSPACING="0" CELLPADDING="0" WIDTH="590"><tr><td><div>
 <HR>
 <a name="Courses"></a><br>
 <H1>Courses</H1>
 
-<p>These are some of the most recent past courses that Professor De Boer taught:</p>
+<p>In the Spring of 2021 Prof. De Boer is teaching one course: </p>
 
 <Blockquote><font face="verdana" size="2">
 <!--EGR 323 with lab-->
+     <A HREF="https://dordt.instructure.com/courses/3110075">
+     <font color="#0099FF">C</font></A>
      <a href="S21/323S21.HTM"
-     >EGR 323&nbsp; Electronics II (with a lab)</a><br>
+     >EGR 323&nbsp; Electronics II (with a lab)</b></a><br>
+
+     <Blockquote><small>
+     Note 1: Professor De Boer welcomes 
+     qualified students to inquire about adding a <A 
+     HREF="https://www.dordt.edu/academics/kuyper-scholars-program" 
+     >Kuyper Honors Project</A> to any of his courses.
+     <BR><BR>
+
+     Note 2:  Students may click on the blue "C" symbol for 
+     a direct link to the course files in Dordt's course 
+     management system, called "Canvas."  Anyone may click on 
+     the gold link to the public portal for the course. 
      
-     <A HREF="F20/322F20.HTM"
-     >EGR 322&nbsp; Electronics I (with a lab)</A><br>
+     </small></Blockquote>
+</Blockquote>
+
+<p>Some of the courses that Prof. De Boer has taught in the recent past are:
+<blockquote>
+     <!--EGR 220/PHYS206&nbsp; Linear Circuits and Electronics (with a lab)
+     <A HREF="S17/220S17.HTM" style="text-decoration: none"
+     ><b><font color="#CC9900">*</font></b></A><br>-->
+
+     EGR 117&nbsp; Introduction to Engineering: Electronics
+     <A HREF="F16/117F16.HTM" style="text-decoration: none"
+     ><b><font color="#CC9900">*</font></b></A><br>
+
+     EGR 170&nbsp; Engineering Programming
+     <A HREF="S19/170S19.HTM" style="text-decoration: none"
+     ><b><font color="#CC9900">*</font></b></A><br>
 	 
-     <A HREF="F20/363F20.HTM" 
-     >EGR 363&nbsp; Introduction to Communication Systems</A><br>
+	 EGR 204&nbsp; Microprocessors and Digital Circuits (with a lab)
+     <a href="F19/204F19.HTM" style=text-decorations; none"
+     ><b><font color="#CC9900">*</font></b></A><br>
 
-     <A HREF="S20/304S20.HTM"
-     >EGR 304&nbsp; Embedded Microcontroller Systems (with a lab)</A><br>
-
-     <a href="F19/204F19.HTM"
-     >EGR 204&nbsp; Microprocessors and Digital Circuits (with a lab)</A><br>
-
-     <A HREF="S19/170S19.HTM"
-     >EGR 170&nbsp; Engineering Programming</A><br>
-	 
+     EGR 220&nbsp; Linear Circuits and Electronics (with a lab)
      <A HREF="S18/220S18.HTM" style="text-decoration: none"
-     >EGR 220&nbsp; Linear Circuits and Electronics (with a lab)</A><br>
+     ><b><font color="#CC9900">*</font></b></A><br>
 
-     <A HREF="F16/117F16.HTM" 
-     >EGR 117&nbsp; Introduction to Engineering: Electronics</A><br>
+     EGR 304&nbsp; Embedded Microcontroller Systems (with a lab)
+     <A HREF="S20/304S20.HTM" style="text-decoration: none"
+     ><b><font color="#CC9900">*</font></b></A><br>
 
-     <A HREF="F16/M204F16.HTM"
-     >MATH 204&nbsp; Differential Equations</A><br>
+     EGR 322&nbsp; Electronics I (with a lab)
+     <A HREF="F20/322F20.HTM" style="text-decoration: none"
+     ><b><font color="#CC9900">*</font></b></A><br>
+	 
+     EGR 323&nbsp; Electronics II (with a lab)
+     <A HREF="S19/323S19.HTM" style="text-decoration: none"
+     ><b><font color="#CC9900">*</font></b></A><br>
+
+     EGR 363&nbsp; Introduction to Communication Systems
+     <A HREF="F20/363F20.HTM" style="text-decoration: none"
+     ><b><font color="#CC9900">*</font></b></A><br>
+
+     MATH 204&nbsp; Differential Equations
+     <A HREF="F16/M204F16.HTM" style="text-decoration: none"
+     ><b><font color="#CC9900">*</font></b></A><br>
 
 </blockquote>
 
      <Blockquote><small>
-     A complete list of past courses taught by Professor De Boer can be found <a href=
+     * Links to Prof. De Boer's most recent past web site for the course.<BR>
+     From there you can find a link to the course syllabus, <br>
+	 a link to older offerings of the course, and more. <br>A complete list 
+	 of past courses taught by Professor De Boer can be found <a href=
 	 "ddb_courses.html">here</a></small></Blockquote> 
 
 
@@ -381,7 +427,7 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 
 <br><br><br>
 <HR width = 20% align = "left">
-<small>This page last edited on 9/03/2021.</small><BR><br><br>&nbsp;
+<small>This page last edited on 1/04/2021.</small><BR><br><br>&nbsp;
  
 
 </DIV></TD></TR>
