--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -1339,12 +1339,24 @@ of maximum rejection of perhaps 100&deg; to 110&deg; whereas a super-cardioid mi
 is usually about a 33-67 compromise between a cardioid and a figure-of-eight pattern with 
 a maximum rejection angle of about 120&deg; <br><br>
 
-<img src="Super_Cardioid_logo.png"> >> <i><b> Shotgun Microphones </b></i><br>
+<img src="Shotgun_logo.png"> <i><b> Shotgun Microphones </b></i><br>
 More will be added here later.  The skinny story is that shotgun microphones are 
 rarely used in house-of-worship applications.<br><br>
 
+<p align="center"><img src="Shotgun.png"><br>
+<i>Above:  The typical shotgun directional pattern, usually valid only for high 
+frequencies such as 2 kHz and up.  The pattern is more similar to a supercardiod for 
+lower frequencies.  The numbers around the outside of the 
+plot show the angle, in degrees, from which a sound may arrive.  The numbers between 
+0 and 1 on the radius to the right of 90 degrees label the fractional amount of sound 
+that might be picked up relative to an on-axis arrival.  If you multiply this number 
+by 100 you get the percentage of sound that might be picked up relative to an on-axis 
+arrival.  </i><br>
+<small>Illustration by Prof. </small><span style="font-family:'Garamond'"
+>d<small><small>DB</small></small></span>.<br>
+<br><p>
 <img src="Omni_logo.png"> <img src="Cardioid_logo.png"> <img src="Super_Cardioid_logo.png"> 
-<img src="Figure_eight_logo.png"><i><b> Directionality Summary</i></b><br>
+<img src="Figure_eight_logo.png"><img src="Shotgun_logo.png"><i><b> Directionality Summary</i></b><br>
 
 Microphones can be sensitive to either the absolute pressure vibrations in the 
 air that create sound, or they can be sensitive to the velocity of the air molecules 
@@ -1357,27 +1369,33 @@ of pressure and velocity sensitivity the pickup pattern can be varied.  In theor
 a 50-50 combination of pressure and velocity sensitivity gives a pattern called 
 cardioid.  A 33% pressure, 67% velocity combination of pressure and velocity gives 
 a pattern called super cardioid.  Microphones with 25%-75% combinations are are 
-also available.  Sometimes these are called hyper cardioid microphones.<br><br>
+also available.  Sometimes these are called hyper cardioid microphones.  By adding 
+an interference tube in front of the capsule a super cardioid microphone can be 
+made into a shotgun microphone that rejects most high-frequency sounds from anywhere 
+but a rather narrow angle at the front.<br><br>
 
 It is hard to keep the ratio of pressure and velocity sensitivity uniform across 
-all frequencies.  This means that omnidirectional and figure-of-eight microphones 
+all frequencies, and even harder to make an interference tube that acts uniformly 
+at all frequencies.  This means that omnidirectional and figure-of-eight microphones 
 tend to give flatter frequency responses for off-axis arriving sounds.  Other 
 microphones tend to not only attenuate sounds arriving from null angles, they 
-also tend to give these sounds a hollow coloration, sort of like an old telephone.  
-Of course, some microphones have less coloration of off-axis sounds than others.<br><br>
+also tend to give these sounds arriving from near-null angles a hollow coloration, 
+sort of like an old telephone.  Of course, some microphones have less coloration 
+of off-axis sounds than others.<br><br>
 
 Plosive sounds in vocals, such as "p,", "b," "s," and "t" sounds are not purely 
 from the vibrations and pressure waves of air.  Some parts of these sounds are 
 from an explosive addition of air molecules emanating from the sound source.  
 Velocity-sensitive microphones are very sensitive to these sounds.  In a 
 non-amplified environment people are not close enough to hear the 
-plosive content of plosive sounds, thus a velocity sensitive microphone needs 
-wind screening to attenuate plosive sounds.  Although this effect is especially 
-strong with a velocity sensitive microphone, the turbulence of air-flow around 
-a capsule can leave an omnidirectional microphone with some sensitivity to 
-plosives as well.  Wind screening around a microphone capsule should be used 
-to attenuate plosives even for an omnidirectional microphone, but it is 
-especially important with the more directional patterns.<br><br>
+plosive content of plosive sounds, but a microphone held close to a polosive 
+source such as a vocalist might pick up these unpleasent sounds.  Thus a velocity 
+sensitive microphone needs wind screening to attenuate plosive sounds.  Although 
+this effect is especially strong with a velocity sensitive microphone, the 
+turbulence of air-flow around a capsule can leave an omnidirectional microphone 
+with some slight sensitivity to plosives as well.  Wind screening around a microphone 
+capsule should be used to attenuate plosives even for an omnidirectional microphone, 
+but it is especially important with the more directional patterns.<br><br>
 
 Close to a sound source the sound waves are curved.  This makes no difference 
 for a pressure-sensitive microphone, but it does matter for a velocity sensitive 
@@ -1391,7 +1409,7 @@ high-fidelity pickup.  A little proximity effect tends to be flattering to most
 vocals, both masculine and feminine.  This, plus the intuitive notion that 
 the microphone ought to reject sounds from the rear, plus the feedback rejection 
 that results from a controlled use of the directionality of a microphone, 
-makes cardioid microphones  the most popular overall choice for house-of-worship 
+makes cardioid microphones the most popular overall choice for house-of-worship 
 microphone applications.<br><br>
 
 A <a href="https://www.youtube.com/watch?v=N0X7owMBlCY&t=8s">demonstration of 
@@ -1405,15 +1423,21 @@ high-quality model, yet this coloration is still audible.  Also listen to the
 room echo that the omnidirectional microphone picks up, and which is rejected 
 to varying degrees by the other patterns.  This room-echo may be used to 
 very pleasing effect in a studio environment, but it is usually 
-out-of-control in a live-sound environment leading to an uncontrollable mix.  
+out-of-control in a live-sound environment, mainly making feedback more 
+likely.  
 <br><br>
 
 Directionality exists on a continuum from no directionality at all&mdash;that being 
-an omnidirectional pattern&mdash;to maximum directionality&mdash;a figure-of-eight 
-pattern.  Omnidirectional microphones are the easiest to miniaturize and 
-the easiest to design for high-fidelity.  Highly directional microphones 
-such as the figure-of-eight microphone tend to compromise fidelity or 
-size and weight or both.<br><br>  
+an omnidirectional pattern&mdash;to maximum directionality&mdash;a shotgun  
+pattern.  By placing a labyrinth or a baffle at the back of the capsule's 
+diaphram increasing sensitivity to velocity and decreased sensitivity to 
+pressure can be achived and this adds directionality to the microphone's 
+pickup pattern.  Adding an interference tube to the front of the capsule 
+further increases directionality to that of a shotgun pattern.  Omnidirectional 
+microphones are the easiest to miniaturize and the easiest to design for 
+high-fidelity.  Highly directional microphones such as figure-of-eight 
+microphones and shotgun microphones tend to compromise fidelity or size and 
+weight or both.<br><br>  
 
 
 
