Updating my online CV 	modified:   CV.HTM

--- a/CV.HTM
+++ b/CV.HTM
@@ -59,9 +59,7 @@
 
 <TR VALIGN="BOTTOM">
   <TD>
-        <p>Office:  SB1638 (formerly SB2608)<!-- and before that, SB237 --> <BR>
-        Office Phone:  712-722-6245 <BR>
-        email: <a href="mailto:Douglas.DeBoer@Dordt.edu">Douglas.DeBoer@Dordt.edu</a></p>
+        <p>email: <a href="mailto:Douglas.DeBoer@Dordt.edu">Douglas.DeBoer@Dordt.edu</a></p>
   </TD>
 </TR>
 </TABLE>
@@ -112,7 +110,7 @@
     </TD>
 
     <TD WIDTH="470" COLSPAN="2"><DIV>
-        Dordt University, Sioux Center, Iowa, <i>1984-present</i> <BR><BR></DIV>
+        Dordt University, Sioux Center, Iowa, <i>1984-2021</i> <BR><BR></DIV>
     </TD>
 </TR>
 
@@ -147,8 +145,9 @@
 		<i>August 2011 through August 2013</i><br><br>
 			
         Partial retirement, teaching only one or two courses per semester<br>
-		<i>August 2017 through present</i><br>
-		<i>Full retirement planned for August, 2021</i><br>    
+		<i>August 2017 through August, 2021</i><br><br>
+		
+		Full retirement, <i>August, 2021</i><br>    
             <BR><BR></DIV>
     </TD>
 </TR>
@@ -817,7 +816,7 @@
         <HR>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 1/28/2021)</small></DIV>
+         <small>(This page last updated on 9/03/2021)</small></DIV>
     </TD>
 </TR>
 
