Added "Emeritus" to my title 	modified:   CV.HTM

--- a/CV.HTM
+++ b/CV.HTM
@@ -41,7 +41,7 @@
   <TD>
 
 <H1>Dr. Douglas F. De Boer, P.E.</H1>
-        <P>Professor of Engineering<BR>
+        <P>Professor Emeritus of Engineering<BR>
         Dordt University<BR>
         498 Fourth Avenue NE<BR>
         Sioux Center IA 51250</P>
@@ -816,7 +816,7 @@
         <HR>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 9/03/2021)</small></DIV>
+         <small>(This page last updated on 9/09/2021)</small></DIV>
     </TD>
 </TR>
 
