Added information on boundary microphones to HoW_S 	new file:   HOW_S/MICS/Pzm2-799px_.jpg     modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -506,6 +506,40 @@ give them some basic instructions.</i>
 Video: <a href="https://www.youtube.com/watch?v=hzfx55aTWBI">Proximity effect and directionality</a></p><p><br>
 
 
+<i><b>Boundary</b> or <b>Pressure-Zone</b> or <b>PSM microphones</b></i><br>
+These are the characteristics of a boundary microphone:
+
+  <ul style="list-style-type:disc"><small>
+  <li>Miniaturized enough to place the diaphragm very close to a boundary.</li>
+  <li>A flat and thin microphone, typically about 4" x 4" x 0.5"
+  <li>Windscreen, if present, is probably minimally effective due to small size.</li> 
+  <li>Shock mount is impractical due to miniature size.</li>
+  <li>Designed to avoid comb filtering effects from reflected sound.</li>
+  <li>Sometimes used inside pianos.</li>
+  <li>Not a very popular microphone due to its specialized design.</li>
+  </small></ul> 
+  
+<p align="center"><img src="Pzm2-799px_.jpg"><br>
+<i>Figure 9.  A typical boundary zone microphone.</i><br>
+<font size="2">Photo: <a href=
+"https://commons.wikimedia.org/wiki/File:Pzm2.jpg"
+>Wikimedia Commons</a>(modified)</font><br>
+<p>The short and skinny story about boundary zone microphones, which are also known as 
+pressure zone microphones and PZM microphones is that they are rarely used in house-of-worship 
+applications except possibly inside pianos, especially grand pianos.  <br><br>
+
+When an extreme amount of 
+amplification is desired one or more boundary zone microphones can be 
+adhesively fastened to the underside of the lid of the piano and the lid can be closed to 
+achieve a strong and highly isolated signal.  Since the piano lid is fully closed the stage 
+area around the piano is relatively quiet compared to having the lid open on full stick with 
+the microphone(s) outside the piano.  But even this use of boundary zone microphones is not 
+very popular in house-of-worship applications because higher fidelity techniques are possible.<br><br>
+
+The interested reader can find out more about boundary zone microphones from the 
+<a href="https://en.wikipedia.org/wiki/Boundary_microphone">Wikipedia article on this topic</a>.<br><br>  
+
+
 <i><b>Lavalier or Lapel-mounted</i></b><br>
 These are the characteristics of a lavalier microphone:
 
@@ -524,12 +558,11 @@ These are the characteristics of a lavalier microphone:
   <li>Sound shrill, with pops and rustling sounds if hand-held.</li>
   <li>Keeps the speaker's hands free for holding a book or gesturing.</li>
   </small></ul> 
-  
+    
 <p>In thinking about where this type of microphone would be in the 3-D space 
 of miniaturization-directionality-fidelity, the miniaturization is becoming 
 extreme enough to cause noticeable compromises.  This is located quite far from the 
 origin of the 3-D space but also quite near the miniaturization axis.</p>
-
 
 <p>Lavalier microphones usually compromise the shock mounting and are made 
 omnidirectional to make the microphone smaller.  Directional lavalier microphones
