--- a/CV.HTM
+++ b/CV.HTM
@@ -669,11 +669,13 @@
     <TD WIDTH="520" COLSPAN="2"><DIV>
         <P>D.F. De Boer, "God's Grace in Weights and Measures" 
         <a href=
-        "http://www.christianengineering.org/publications/cec-proceedings/CEC%202019%20Proceedings.pdf?attredirects=0&d=1"
-        ><I>Proceedings of the 2019 Christian Engineering Conference</I></a>, 
+        "https://drive.google.com/file/d/1pIXDMo7HD3g34FlSWsw9WDUXRi5TSOcE/view?usp=drive_web"
+		><!--"http://www.christianengineering.org/publications/cec-proceedings/CEC%202019%20Proceedings.pdf?attredirects=0&d=1"
+        --><I>Proceedings of the 2019 Christian Engineering Conference</I></a>, 
         Sioux Center, Iowa, June 2019, pp 119 &ndash; 139.  (Slides to accompany this paper are <a href=
-		"http://www.christianengineering.org/publications/cec-proceedings/CEC%202019%20Presentations.zip?attredirects=0&d=1"
-		>available</a>.  See "Session 5 - DeBoer")</P>
+		"https://drive.google.com/file/d/1kHoq871jOAPdcINA5bd0wGqRELsMWK43/view"
+		><!--"http://www.christianengineering.org/publications/cec-proceedings/CEC%202019%20Presentations.zip?attredirects=0&d=1"
+		-->available</a>.  See "Session 5 - DeBoer. . .")</P>
 
         <P>D.F. De Boer, "Using Design Hierarchy in Digital Logic 
         to Illustrate the Scientific Method as a Human Invention" 
