Set up a practice site for SKPL.  Also fixed broken links in CV 	modified:   CV.HTM 	new file:   SKPL/ApplicationExpenses2021-2022.xlsx 	new file:   SKPL/SKPL_app.html

--- a/CV.HTM
+++ b/CV.HTM
@@ -304,8 +304,9 @@
 			Chair of the <a href=
 			"http://www.siouxland.org/">Siouxland Section of the IEEE</a>, 
 			Aug. 2002 through Dec. 2003<br>&nbsp; &nbsp;
-			Region 4 Science Kits for Public Libraries (<a href=
-			"https://sciencekitsforpubliclibraries.org/">SKPL</a>) Application Chair, <br>&nbsp; &nbsp; &nbsp; &nbsp;
+			Region 4 Science Kits for Public Libraries (<!--<a href=
+			"https://sciencekitsforpubliclibraries.org/"--><a href="https://r4.ieee.org/skpl/"
+			>SKPL</a>) Application Chair, <br>&nbsp; &nbsp; &nbsp; &nbsp;
 			     August 2019 through present.<br> 
         <A HREF = "http://www.tbp.org">Tau Beta Pi</A>
                       (Inactive Member)<BR>
@@ -430,7 +431,7 @@
         <A HREF="http://www.hpmuseum.net/display_item.php?hw=367" 
         target="_blank">HP9000/520</A> in the HP Computer Museum 
         contains "<a href="https://en.wikipedia.org/wiki/HP_FOCUS"
-        target="_blank">HP Focus</a>" chips I helped design,)  
+        target="_blank">HP Focus</a>" chips I helped design)  
         When I left HP in 1984 to join the faculty at Dordt 
         University, my division at HP was just beginning the work 
         on the <A HREF="http://en.wikipedia.org/wiki/PA-RISC" 
@@ -472,9 +473,11 @@
 		Susan was a graduate of <a href="https://www.alextech.edu/" 
 		target="_blank">Alexandria Technical and Community College</a>.</P> 
 
-        <P>I have been active in the <A 
-        HREF="http://www.siouxland.org" target="_blank">local 
-        section of the IEEE</A> as the newsletter editor for the 
+        <P>I have been active in the <!--<A 
+        HREF="http://www.siouxland.org" target="_blank">--><a href=
+		"https://webinabox.vtools.ieee.org/wibp_home/index/R40031" 
+		target="_blank">local section of the IEEE</A> as the 
+		newsletter editor for the 
         Siouxland branch of the IEEE in 1990 and 1995-2002.  In 
         1996 I was named the "IEEE Siouxland Section 
 		Engineer-of-the-Year" for contributions I made to the 
