Revised some HOW_Sound files
	modified:   HOW_S/fader.html
	modified:   HOW_S/gain.html

--- a/HOW_S/fader.html
+++ b/HOW_S/fader.html
@@ -94,7 +94,7 @@ up from zero.  If you find that the sound is the proper loudness to blend well i
 the mix only when the fader is in the bottom portion of its range you will find 
 the mix hard to control.  Tiny adjustments to the faders will make big changes.  
 This is symptomatic of a <i>gain structure</i> problem.  That is a story for another 
-day.  For now, take at least the first step and scan the board for any blinking read 
+day.  For now, take at least the first step and scan the board for any blinking red 
 "PK" or "peak" LEDs and use the channel's PFL button to check the adjustment of the 
 gain-trim knob.  Most of the time if you are mixing with the fader in the bottom 
 portion of its range the problem is the gain-trim knob, but there can be other 
@@ -148,7 +148,7 @@ small strips about 1/2 inch high by the width of a channel-strip.  These can be
 easily moved around during the worship service to mark the next channels or 
 groups to become active in the mix.  Most mixer boards feature about an inch 
 or two of a flat steel surface below the main faders to accommodate either 
-adhesive or magnetic labels.  In any case, it routine to stick various 
+adhesive or magnetic labels.  In any case, it is routine to stick various 
 labels on this area to assist with rapid recognition of the channels, and 
 to remove, add, and edit these labels frequently as desired.</p><p>  
 
