Main purpose of these edits was to link my tribute video to my web site.  Secondary purpose was to pull some updates on mics in.

--- a/CV.HTM
+++ b/CV.HTM
@@ -607,30 +607,27 @@
 		Resources and lives in Pierre, South Dakota.  There is one
 		grandchild on Doug's side of the family.  
 		
-		<p>I am getting close to retirement age now.  Through a 
-		"Retirement Incentive" agreement I have made with Dordt 
-		University I am now reducing my time commitment to Dordt University
-		to half-time.  I have no plans to retire completely from 
-		engineering.  I am now in a transition phase from 
+		<p>At the end of August 2021, I officially retired from the 
+		faculty at Dordt University.  They made a 
+		<a href="https://www.youtube.com/watch?v=lG0CtrVYgS8">tribute video</a> 
+		upon the occasion of my retirement.  I am now in a transition phase from 
 		Dordt University to whatever new engineering opportunities I 
-		find to glorify God in the future.  I'm not only 
-		considering volunteer opportunities, but certainly I am 
+		find to glorify God in the future.  Certainly I am 
 		aware of more volunteer opportunities for engineers than 
 		I can shake a stick at!  For the next few years I plan to 
 		explore some aspects of my engineering talent in a 
 		direction that will enable my Kingdom service well into 
-		my elder years while I also devote a proportion of my 
-		time to Dordt University in my continuing role as a Professor.  
-		One of the retirement activities I'm exploring is the IEEE's
+		my elder years. One of the retirement activities I'm 
+		participating in is the IEEE's
 		"<a href="https://r4.ieee.org/skpl/">Science Kits for Public 
 		Libraries" project</a>."  I serve as the Grant Applications 
-		Chairperson for this project, a volunteer role.  Exactly what 
-		else I might do when I am fully retired I do not know yet, 
-		but I trust the Holy Spirit will lead me.  
+		Chairperson for this project, a very part-time role.  Exactly 
+		what else I might do in retirement I do not know yet, but I 
+		trust the Holy Spirit will lead me.  
 
-        <P>In my role as a professor it is my desire to lead my 
+        <P>In my role as a professor it was my desire to lead my 
 		students to be first-rate engineers in 
-        Christ's service.  I expect to offer them a combination 
+        Christ's service.  I expected to offer them a combination 
         of breadth and depth in their studies that helps them ground
         their engineering talent in their Christian faith.  
         Engineering is a delightfully multifaceted career field 
@@ -821,7 +818,7 @@
         <HR>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 9/09/2021)</small></DIV>
+         <small>(This page last updated on 1/19/2022)</small></DIV>
     </TD>
 </TR>
 
